--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/preset-react": "^7.18.6",
     "@types/react": "~18.0.14",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "prettier": "2.8.7",
     "typescript": "^4.9.4"
   },
   "private": true
