--- a/package.json
+++ b/package.json
@@ -7,12 +7,22 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "npx expo export:web"
+    "build-web": "npx expo export:web",
+    "web-run": "npx serve web-build"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
+    "@react-native-community/masked-view": "*",
+    "@react-navigation/bottom-tabs": "6.3.1",
+    "@react-navigation/drawer": "6.4.1",
+    "@react-navigation/elements": "1.3.3",
+    "@react-navigation/material-bottom-tabs": "6.2.1",
+    "@react-navigation/material-top-tabs": "6.2.1",
+    "@react-navigation/native": "6.0.10",
+    "@react-navigation/native-stack": "6.6.1",
+    "@react-navigation/stack": "6.2.1",
+    "eas-cli": "^3.8.1",
     "expo": "~48.0.9",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
@@ -20,10 +30,16 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-pager-view": "6.1.2",
+    "react-native-paper": "^4.7.2",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-tab-view": "^3.0.0",
+    "react-native-web": "~0.18.10",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -31,7 +47,8 @@
     "@types/react": "~18.0.14",
     "babel-plugin-module-resolver": "^5.0.0",
     "prettier": "2.8.7",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "webpack-bundle-analyzer": "^4.8.0"
   },
   "private": true
 }
